--- a/Src/Mail.dat.Io/Mail.dat.Io.csproj
+++ b/Src/Mail.dat.Io/Mail.dat.Io.csproj
@@ -5,9 +5,9 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>disable</Nullable>
 		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-		<Version>0.0.10</Version>
-		<AssemblyVersion>0.0.10</AssemblyVersion>
-		<FileVersion>0.0.10</FileVersion>
+		<Version>10.0.1</Version>
+		<AssemblyVersion>10.0.1</AssemblyVersion>
+		<FileVersion>10.0.1</FileVersion>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -39,7 +39,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="EFCore.BulkExtensions.Sqlite" Version="9.0.2" />
+		<PackageReference Include="EFCore.BulkExtensions.Sqlite" Version="10.0.0-rc.2" />
 		<PackageReference Include="SharpZipLib" Version="1.4.2" />
 	</ItemGroup>
 
