Added 26-1 specification; Updated 25-1 and 24-1 specifications.

--- a/Src/Mail.dat.Json.Specification/Mail.dat.Json.Specification.csproj
+++ b/Src/Mail.dat.Json.Specification/Mail.dat.Json.Specification.csproj
@@ -43,6 +43,9 @@
 		<Content Include="Specification\25-1\mail-dat.json">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
+		<Content Include="Specification\26-1\mail-dat.json">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 
 	<ItemGroup>
